--- a/src/main/angular-media-app/src/app/auth/login/login.component.html
+++ b/src/main/angular-media-app/src/app/auth/login/login.component.html
@@ -6,23 +6,32 @@
                     <div class="card" style="border-radius: 15px;">
                         <div class="p-5">
                             <h2 class="text-uppercase text-center mb-5">Login</h2>
-                            <form>
+                            <form #form="ngForm" class="needs-validation" (keydown.enter)="(isValidEmail() && isValidPassword()) && logInUser();$event.preventDefault()" novalidate>
                                 <div class="form-outline mb-4">
                                     <input name="email" type="email" id="label_email"
-                                        class="form-control form-control-lg" [(ngModel)]="user.email" />
+                                        [ngClass]="{'input-invalid': !isValidEmail(), 'input-valid': isValidEmail()}" class="form-control form-control-lg" [(ngModel)]="user.email"/>
                                     <label class="form-label" for="label_email">Your Email</label>
+                                    <div *ngIf="!isValidEmail()" class="text-danger">
+                                        Please provide a valid email.
+                                    </div>
+                                    <div *ngIf="isValidEmail()" class="text-valid">Email is valid</div>
+
+
                                 </div>
 
                                 <div class="form-outline mb-4">
                                     <input name="password" type="password" id="label_password"
-                                        class="form-control form-control-lg" [(ngModel)]="user.password" />
+                                        [ngClass]="{'input-invalid': !isValidEmail(), 'input-valid': isValidEmail()}" class="form-control form-control-lg" [(ngModel)]="user.password" />
                                     <label class="form-label" for="label_password">Password</label>
+                                    <div *ngIf="!isValidPassword()" class="text-danger">
+                                        Please provide a valid password.
+                                    </div>
+                                    <div *ngIf="isValidPassword()" class="text-valid">Password is valid</div>
                                 </div>
 
                                 <div class="d-flex justify-content-center">
-                                    <button type="button"
-                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
-                                        (click)="logInUser()">Submit</button>
+                                    <button type="submit"
+                                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" [disabled]="!isValidEmail() || !isValidPassword()" (click)="logInUser()">Submit</button>
                                 </div>
 
                                 <p class="text-center text-muted mt-5 mb-0">Not a member? <a href="/auth/registration"
