--- a/src/main/angular-media-app/src/styles.css
+++ b/src/main/angular-media-app/src/styles.css
@@ -24,3 +24,11 @@
 *{
     box-sizing: border-box;
 }
+
+
+.cdk-overlay-pane {
+    position: fixed !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+}
