--- a/src/main/angular-media-app/src/app/user-page/user-page.component.css
+++ b/src/main/angular-media-app/src/app/user-page/user-page.component.css
@@ -1,3 +1,7 @@
+.delete-button{
+    text-align: left;
+}
+
 .bimage{
     background: url(
      'https://media.istockphoto.com/id/1432417261/photo/abstract-blurry-grey-color-for-background-blur-festival-lights-outdoor-celebration-and-white.jpg?b=1&s=612x612&w=0&k=20&c=6e2xgjykeGVuEyFKMvfyL679BZI4tDSXAbu-GU0WfKM='
